--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
+  firebase_database: ^11.1.4
 
 dev_dependencies:
   flutter_test:
