--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>974251935497-0sr7cjr1pg1u9dts2bes052u0lfpq16a.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.974251935497-0sr7cjr1pg1u9dts2bes052u0lfpq16a</string>
 	<key>API_KEY</key>
 	<string>AIzaSyB4DgjTtTfJ6y6Rc_5pZ485oeivNWCXnOQ</string>
 	<key>GCM_SENDER_ID</key>
@@ -26,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:974251935497:ios:92742e27d9e1a9cc9b35d8</string>
+	<key>DATABASE_URL</key>
+	<string>https://cray-tech-project-ecom-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
