--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_database: ^11.1.4
   google_sign_in: ^6.2.1
+  razorpay_flutter: ^1.3.7
 
 dev_dependencies:
   flutter_test:
