ios app opening fixed firebase core fixed

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>974251935497-0sr7cjr1pg1u9dts2bes052u0lfpq16a.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.974251935497-0sr7cjr1pg1u9dts2bes052u0lfpq16a</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>974251935497-qmckvl4bflj4uegl1s2igenbghve451h.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyB4DgjTtTfJ6y6Rc_5pZ485oeivNWCXnOQ</string>
 	<key>GCM_SENDER_ID</key>
